# calculator

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
.github/workflow/: power.yml
.github/workflows/: docker-build.yml  power.yml  root.yml
app/: calculator.py  operaciones.py
test/: test_divide.py  test_multiplica.py  test_resta.py  test_suma.py
test/integration/: test_integracion.py  test_integration.py
test/unit/: test_divide.py  test_multiply.py  test_power  test_power.py  test_root.py  test_subtract.py  test_sum.py
